Fixed compile error.